@@ -56,6 +56,8 @@ Release 0.20.0 - Unreleased
    HBASE-1277  HStoreKey: Wrong comparator logic (Evgeny Ryabitskiy)
    HBASE-1275  TestTable.testCreateTable broken (Ryan Rawson via Stack)
    HBASE-1274  TestMergeTable is broken in Hudson (Nitay Joffe via Stack)
+   HBASE-1283  thrift's package descrpition needs to update for start/stop
+               procedure (Rong-en Fan via Stack)
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
